// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiControlBar is rendered 1`] = `
<section
  aria-label="aria-label"
  class="euiControlBar testClass1 testClass2 euiControlBar--large euiControlBar--fixed"
  data-test-subj="test subject string"
  style="left: 0px; right: 0px;"
>
  <h2
    class="euiScreenReaderOnly"
  >
    Page level controls
  </h2>
  <div
    class="euiControlBar__controls"
  >
    <nav
      aria-label="Breadcrumbs"
      class="euiBreadcrumbs euiControlBar__breadcrumbs euiBreadcrumbs--truncate"
    >
      <ol
        class="euiBreadcrumbs__list css-1ifj11g-euiBreadcrumbs__list-isTruncated"
      >
        <li
          class="euiBreadcrumb css-1czveci-euiBreadcrumb-isTruncated"
        >
          <span
            class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
            title="src"
          >
            src
          </span>
        </li>
        <li
          class="euiBreadcrumb euiBreadcrumb--last css-1czveci-euiBreadcrumb-isTruncated"
        >
          <span
            aria-current="page"
            class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
            title="components"
          >
            components
          </span>
        </li>
      </ol>
    </nav>
    <button
      class="euiButton euiButton--ghost euiButton--small euiControlBar__button"
      data-test-subj="dts"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Sound the Alarm
        </span>
      </span>
    </button>
    <div
      class="euiControlBar__text"
    >
      Close the Hatch
    </div>
    <div
      class="euiControlBar__divider"
    />
    <span
      class="euiControlBar__icon"
      color="danger"
      data-euiicon-type="alert"
    >
      Sample Icon
    </span>
    <div
      class="euiControlBar__spacer"
    />
    <button
      class="euiControlBar__tab"
    >
      Flight 815
    </button>
  </div>
</section>
`;

exports[`EuiControlBar props leftOffset is rendered 1`] = `
Array [
  <section
    aria-label="Page level controls"
    class="euiControlBar euiControlBar--large euiControlBar--fixed"
    style="left: 200px; right: 0px;"
  >
    <h2
      class="euiScreenReaderOnly"
    >
      Page level controls
    </h2>
    <div
      class="euiControlBar__controls"
    >
      <nav
        aria-label="Breadcrumbs"
        class="euiBreadcrumbs euiControlBar__breadcrumbs euiBreadcrumbs--truncate"
      >
        <ol
          class="euiBreadcrumbs__list css-1ifj11g-euiBreadcrumbs__list-isTruncated"
        >
          <li
            class="euiBreadcrumb css-1czveci-euiBreadcrumb-isTruncated"
          >
            <span
              class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
              title="src"
            >
              src
            </span>
          </li>
          <li
            class="euiBreadcrumb euiBreadcrumb--last css-1czveci-euiBreadcrumb-isTruncated"
          >
            <span
              aria-current="page"
              class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
              title="components"
            >
              components
            </span>
          </li>
        </ol>
      </nav>
      <button
        class="euiButton euiButton--ghost euiButton--small euiControlBar__button"
        data-test-subj="dts"
        type="button"
      >
        <span
          class="euiButtonContent euiButton__content"
        >
          <span
            class="euiButton__text"
          >
            Sound the Alarm
          </span>
        </span>
      </button>
      <div
        class="euiControlBar__text"
      >
        Close the Hatch
      </div>
      <div
        class="euiControlBar__divider"
      />
      <span
        class="euiControlBar__icon"
        color="danger"
        data-euiicon-type="alert"
      >
        Sample Icon
      </span>
      <div
        class="euiControlBar__spacer"
      />
      <button
        class="euiControlBar__tab"
      >
        Flight 815
      </button>
    </div>
  </section>,
  <p
    aria-live="assertive"
    class="euiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;

exports[`EuiControlBar props maxHeight is rendered 1`] = `
Array [
  <section
    aria-label="Page level controls"
    class="euiControlBar euiControlBar--large euiControlBar--fixed"
    style="left: 0px; right: 0px; max-height: 20rem;"
  >
    <h2
      class="euiScreenReaderOnly"
    >
      Page level controls
    </h2>
    <div
      class="euiControlBar__controls"
    >
      <nav
        aria-label="Breadcrumbs"
        class="euiBreadcrumbs euiControlBar__breadcrumbs euiBreadcrumbs--truncate"
      >
        <ol
          class="euiBreadcrumbs__list css-1ifj11g-euiBreadcrumbs__list-isTruncated"
        >
          <li
            class="euiBreadcrumb css-1czveci-euiBreadcrumb-isTruncated"
          >
            <span
              class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
              title="src"
            >
              src
            </span>
          </li>
          <li
            class="euiBreadcrumb euiBreadcrumb--last css-1czveci-euiBreadcrumb-isTruncated"
          >
            <span
              aria-current="page"
              class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
              title="components"
            >
              components
            </span>
          </li>
        </ol>
      </nav>
      <button
        class="euiButton euiButton--ghost euiButton--small euiControlBar__button"
        data-test-subj="dts"
        type="button"
      >
        <span
          class="euiButtonContent euiButton__content"
        >
          <span
            class="euiButton__text"
          >
            Sound the Alarm
          </span>
        </span>
      </button>
      <div
        class="euiControlBar__text"
      >
        Close the Hatch
      </div>
      <div
        class="euiControlBar__divider"
      />
      <span
        class="euiControlBar__icon"
        color="danger"
        data-euiicon-type="alert"
      >
        Sample Icon
      </span>
      <div
        class="euiControlBar__spacer"
      />
      <button
        class="euiControlBar__tab"
      >
        Flight 815
      </button>
    </div>
  </section>,
  <p
    aria-live="assertive"
    class="euiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;

exports[`EuiControlBar props mobile is rendered 1`] = `
Array [
  <section
    aria-label="Page level controls"
    class="euiControlBar euiControlBar--large euiControlBar--fixed euiControlBar--showOnMobile"
    style="left: 0px; right: 0px;"
  >
    <h2
      class="euiScreenReaderOnly"
    >
      Page level controls
    </h2>
    <div
      class="euiControlBar__controls"
    >
      <nav
        aria-label="Breadcrumbs"
        class="euiBreadcrumbs euiControlBar__breadcrumbs euiBreadcrumbs--truncate"
      >
        <ol
          class="euiBreadcrumbs__list css-1ifj11g-euiBreadcrumbs__list-isTruncated"
        >
          <li
            class="euiBreadcrumb css-1czveci-euiBreadcrumb-isTruncated"
          >
            <span
              class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
              title="src"
            >
              src
            </span>
          </li>
          <li
            class="euiBreadcrumb euiBreadcrumb--last css-1czveci-euiBreadcrumb-isTruncated"
          >
            <span
              aria-current="page"
              class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
              title="components"
            >
              components
            </span>
          </li>
        </ol>
      </nav>
      <button
        class="euiButton euiButton--ghost euiButton--small euiControlBar__button"
        data-test-subj="dts"
        type="button"
      >
        <span
          class="euiButtonContent euiButton__content"
        >
          <span
            class="euiButton__text"
          >
            Sound the Alarm
          </span>
        </span>
      </button>
      <div
        class="euiControlBar__text"
      >
        Close the Hatch
      </div>
      <div
        class="euiControlBar__divider"
      />
      <span
        class="euiControlBar__icon"
        color="danger"
        data-euiicon-type="alert"
      >
        Sample Icon
      </span>
      <div
        class="euiControlBar__spacer"
      />
      <button
        class="euiControlBar__tab"
      >
        Flight 815
      </button>
    </div>
  </section>,
  <p
    aria-live="assertive"
    class="euiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;

exports[`EuiControlBar props position is rendered 1`] = `
<section
  aria-label="Page level controls"
  class="euiControlBar euiControlBar--large euiControlBar--absolute"
  style="left: 0px; right: 0px;"
>
  <h2
    class="euiScreenReaderOnly"
  >
    Page level controls
  </h2>
  <div
    class="euiControlBar__controls"
  >
    <nav
      aria-label="Breadcrumbs"
      class="euiBreadcrumbs euiControlBar__breadcrumbs euiBreadcrumbs--truncate"
    >
      <ol
        class="euiBreadcrumbs__list css-1ifj11g-euiBreadcrumbs__list-isTruncated"
      >
        <li
          class="euiBreadcrumb css-1czveci-euiBreadcrumb-isTruncated"
        >
          <span
            class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
            title="src"
          >
            src
          </span>
        </li>
        <li
          class="euiBreadcrumb euiBreadcrumb--last css-1czveci-euiBreadcrumb-isTruncated"
        >
          <span
            aria-current="page"
            class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
            title="components"
          >
            components
          </span>
        </li>
      </ol>
    </nav>
    <button
      class="euiButton euiButton--ghost euiButton--small euiControlBar__button"
      data-test-subj="dts"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Sound the Alarm
        </span>
      </span>
    </button>
    <div
      class="euiControlBar__text"
    >
      Close the Hatch
    </div>
    <div
      class="euiControlBar__divider"
    />
    <span
      class="euiControlBar__icon"
      color="danger"
      data-euiicon-type="alert"
    >
      Sample Icon
    </span>
    <div
      class="euiControlBar__spacer"
    />
    <button
      class="euiControlBar__tab"
    >
      Flight 815
    </button>
  </div>
</section>
`;

exports[`EuiControlBar props rightOffset is rendered 1`] = `
Array [
  <section
    aria-label="Page level controls"
    class="euiControlBar euiControlBar--large euiControlBar--fixed"
    style="left: 0px; right: 200px;"
  >
    <h2
      class="euiScreenReaderOnly"
    >
      Page level controls
    </h2>
    <div
      class="euiControlBar__controls"
    >
      <nav
        aria-label="Breadcrumbs"
        class="euiBreadcrumbs euiControlBar__breadcrumbs euiBreadcrumbs--truncate"
      >
        <ol
          class="euiBreadcrumbs__list css-1ifj11g-euiBreadcrumbs__list-isTruncated"
        >
          <li
            class="euiBreadcrumb css-1czveci-euiBreadcrumb-isTruncated"
          >
            <span
              class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
              title="src"
            >
              src
            </span>
          </li>
          <li
            class="euiBreadcrumb euiBreadcrumb--last css-1czveci-euiBreadcrumb-isTruncated"
          >
            <span
              aria-current="page"
              class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
              title="components"
            >
              components
            </span>
          </li>
        </ol>
      </nav>
      <button
        class="euiButton euiButton--ghost euiButton--small euiControlBar__button"
        data-test-subj="dts"
        type="button"
      >
        <span
          class="euiButtonContent euiButton__content"
        >
          <span
            class="euiButton__text"
          >
            Sound the Alarm
          </span>
        </span>
      </button>
      <div
        class="euiControlBar__text"
      >
        Close the Hatch
      </div>
      <div
        class="euiControlBar__divider"
      />
      <span
        class="euiControlBar__icon"
        color="danger"
        data-euiicon-type="alert"
      >
        Sample Icon
      </span>
      <div
        class="euiControlBar__spacer"
      />
      <button
        class="euiControlBar__tab"
      >
        Flight 815
      </button>
    </div>
  </section>,
  <p
    aria-live="assertive"
    class="euiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;

exports[`EuiControlBar props showContent is rendered 1`] = `
Array [
  <section
    aria-label="Page level controls"
    class="euiControlBar euiControlBar-isOpen euiControlBar--large euiControlBar--fixed"
    style="left: 0px; right: 0px;"
  >
    <h2
      class="euiScreenReaderOnly"
    >
      Page level controls
    </h2>
    <div
      class="euiControlBar__controls"
    >
      <nav
        aria-label="Breadcrumbs"
        class="euiBreadcrumbs euiControlBar__breadcrumbs euiBreadcrumbs--truncate"
      >
        <ol
          class="euiBreadcrumbs__list css-1ifj11g-euiBreadcrumbs__list-isTruncated"
        >
          <li
            class="euiBreadcrumb css-1czveci-euiBreadcrumb-isTruncated"
          >
            <span
              class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
              title="src"
            >
              src
            </span>
          </li>
          <li
            class="euiBreadcrumb euiBreadcrumb--last css-1czveci-euiBreadcrumb-isTruncated"
          >
            <span
              aria-current="page"
              class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
              title="components"
            >
              components
            </span>
          </li>
        </ol>
      </nav>
      <button
        class="euiButton euiButton--ghost euiButton--small euiControlBar__button"
        data-test-subj="dts"
        type="button"
      >
        <span
          class="euiButtonContent euiButton__content"
        >
          <span
            class="euiButton__text"
          >
            Sound the Alarm
          </span>
        </span>
      </button>
      <div
        class="euiControlBar__text"
      >
        Close the Hatch
      </div>
      <div
        class="euiControlBar__divider"
      />
      <span
        class="euiControlBar__icon"
        color="danger"
        data-euiicon-type="alert"
      >
        Sample Icon
      </span>
      <div
        class="euiControlBar__spacer"
      />
      <button
        class="euiControlBar__tab"
      >
        Flight 815
      </button>
    </div>
    <div
      class="euiControlBar__content"
    >
      Content
    </div>
  </section>,
  <p
    aria-live="assertive"
    class="euiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;

exports[`EuiControlBar props size is rendered 1`] = `
Array [
  <section
    aria-label="Page level controls"
    class="euiControlBar euiControlBar--small euiControlBar--fixed"
    style="left: 0px; right: 0px;"
  >
    <h2
      class="euiScreenReaderOnly"
    >
      Page level controls
    </h2>
    <div
      class="euiControlBar__controls"
    >
      <nav
        aria-label="Breadcrumbs"
        class="euiBreadcrumbs euiControlBar__breadcrumbs euiBreadcrumbs--truncate"
      >
        <ol
          class="euiBreadcrumbs__list css-1ifj11g-euiBreadcrumbs__list-isTruncated"
        >
          <li
            class="euiBreadcrumb css-1czveci-euiBreadcrumb-isTruncated"
          >
            <span
              class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
              title="src"
            >
              src
            </span>
          </li>
          <li
            class="euiBreadcrumb euiBreadcrumb--last css-1czveci-euiBreadcrumb-isTruncated"
          >
            <span
              aria-current="page"
              class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
              title="components"
            >
              components
            </span>
          </li>
        </ol>
      </nav>
      <button
        class="euiButton euiButton--ghost euiButton--small euiControlBar__button"
        data-test-subj="dts"
        type="button"
      >
        <span
          class="euiButtonContent euiButton__content"
        >
          <span
            class="euiButton__text"
          >
            Sound the Alarm
          </span>
        </span>
      </button>
      <div
        class="euiControlBar__text"
      >
        Close the Hatch
      </div>
      <div
        class="euiControlBar__divider"
      />
      <span
        class="euiControlBar__icon"
        color="danger"
        data-euiicon-type="alert"
      >
        Sample Icon
      </span>
      <div
        class="euiControlBar__spacer"
      />
      <button
        class="euiControlBar__tab"
      >
        Flight 815
      </button>
    </div>
  </section>,
  <p
    aria-live="assertive"
    class="euiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;
